# the_odyssey

./: .dockerignore  .env.example  .gitignore  Alameda County Food Bank - Hackathon Challenge Themes.docx  Alameda County Food Bank - The Build List.docx  BACKEND_HANDOFF.md  Makefile  README.md  compose.yaml  design-qa.md  pyproject.toml
BUILD_CONTEXT/: 00_BUILD_CONTRACT.md  01_PRODUCT_AND_UX_SPEC.md  02_VISUAL_SYSTEM_AND_SCREEN_REFERENCE.md  03_DATA_AND_SCENARIO_CONTRACT.md  04_DECISION_AND_AGENT_CONTRACT.md  05_ARCHITECTURE_AND_RUNBOOK.md  06_ACCEPTANCE_EVALUATION_AND_DEMO.md
BUILD_CONTEXT/fixtures/: base_manifest.json  candidate_actions.json  category_policies.json  evidence_records.json  historical_weekly_category_flow.json  planned_inbound.json  warehouse.json
BUILD_CONTEXT/golden/: scenario_d.golden.json
BUILD_CONTEXT/journey-audit-current/: audit.md
BUILD_CONTEXT/schemas/: base_manifest.schema.json  candidate_actions.schema.json  category_policies.schema.json  common.schema.json  evidence_records.schema.json  golden_output.schema.json  historical_weekly_category_flow.schema.json  pending_donation_offers.schema.json  planned_inbound.schema.json  scenario_overlay.schema.json  warehouse_constraints.schema.json
apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
deliverables/: NOURISHOPS_DOSSIER.md  TECH_AND_STRATEGY_PLAYBOOK.md  THE_PITCH.md  food-bank-ai-problem-framing.md  red-team-battle-card.md
docker/: api.Dockerfile  web.Dockerfile
docs/: decision-platform-architecture.md  feature-peer-matching-board.md  postgresql-simulation-architecture.md  scenario-platform-contract.md
docs/research/: FOODBANK_DOMAIN_GROUNDING.md  (+4 more)
scenarios/: budget_tradeoff_proposed_enhancements.md  short_life_produce_offer_blueprint.md
scripts/: check_no_float.py  smoke_agent.py
tests/: support.py
(+121 files in other folders)
